		cvs-fast-export project news

1.34: 2015-09-25
    Another Python compatibility fix.
    Fix inconsistent license header in revdir.c.

1.33: 2015-08-30
    Deal with a really annoying build-portability glitch around -lrt.
    Fix cvsconvert to be Python 2.6-compatible.

1.32: 2015-06-10
    Emit a source type declaration reposurgeon can use.
    Project now has a logo.

1.31: 2015-04-28
    Improve OSX portability. 

1.30: 2015-04-02
    Tagged branchlets created for CVS tags not matching a gitspace commits.
    Many portability fixes for *BSD.

1.29: 2014-12-17
    A significant improvement in the correctness of vendor-branch handling.
    More speed improvements.

1.28: 2014-12-08
    Fix for buggy emission of lines ending in @.
    More speedups, and dramatic reduction in working-set size.

1.27: 2014-11-27
    The bug that produced "unnumbered head" warnings has been fixed.

1.26: 2014-11-05
    cvscompare changed to cvsconvert, a validating wrapper script.
    The rules for keyword expansion have changed yet again.

1.25: 2014-11-03
    Simplify and fully document -k; it now requires an argument.
    In normal (non-promiscuous) mode, paths containing CVSROOT are ignored.
    There is a new wrapper script, 'cvscompare', for sanity-checking conversions.
    A HOWTO on reporting bugs has been added to the distribution.

1.24: 2014-10-30
    Bugfix release: a late change to I/O buffering in 1.23 was faulty.

1.23: 2014-10-29
    New -l option for redirecting logs during long conversions.
    More speedups and working-set reductions.
    Incremental dumping can now be done in fast mode.

1.22: 2014-10-21
    New --embed-id and --expand options by Robert deBath.

1.21: 2014-10-19
    When incremental dumping, suppress tags associated with old commits.
    Performance improved by x8; see also the new -F and -C options.
    New -a optio to dump a list of author IDs found in a repo.

1.20: 2014-10-08