@@ -1,0 +1,85 @@
+blob
+mark :1
+data 1074
+static const char cexe_t_c[] =
+"@(#)$Id$";
+/********************************************************************
+ *
+ *	Copyright (C) 1985-2013  John E. Wulff
+ *
+ *  You may distribute under the terms of either the GNU General Public
+ *  License or the Artistic License, as specified in the README file.
+ *
+ *  For more information about this program, or for information on how
+ *  to contact the author, see the README file
+ *
+ *	cexe_t.c
+ *	template for cexe.c to bootstrap icr and ict
+ *	if cexe.c does not exist
+ *
+ *******************************************************************/
+
+#include	<stdio.h>
+#include	<signal.h>
+#include	"icc.h"
+#include	"comp.h"
+
+#if INT_MAX == 32767 && defined (LONG16)
+long
+#else
+int
+#endif
+iC_exec(int iC_indx, iC_Gt * iC_gf)
+{
+    fflush(iC_outFP);
+    fprintf(iC_errFP,
+	"\n*** Error: cexe.c: does not support arithmetic expressions yet.\n"
+	  "*** Rebuild compilers using '%s -c -%sO%o %s; m -rt'\n"
+	  , iC_progname, iC_gflag ? "g" : "", iC_optimise, inpNM);
+    iC_quit(SIGUSR1);
+    return 0;	/* never gets here */
+} /* iC_exec */
+
+commit refs/heads/master
+mark :2
+committer jw <jw> 1378801907 +0000
+data 63
+use cexe_t.c as a template for cexe.c to bootstrap icr and ict
+
+M 100644 :1 access
+M 100644 inline .gitignore
+data 198
+# CVS default ignores begin
+tags
+TAGS
+.make.state
+.nse_depinfo
+*~
+#*
+.#*
+,*
+_$*
+*$
+*.old
+*.bak
+*.BAK
+*.orig
+*.rej
+.del-*
+*.a
+*.olb
+*.o
+*.obj
+*.so
+*.exe
+*.Z
+*.elc
+*.ln
+core
+# CVS default ignores end
+
+
+reset refs/heads/master
+from :2
+
+done
